# linkedin-connection-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  WORKFLOW.md  main.py  pyproject.toml  requirements.txt  run_headless.py
config/: agents.yaml  icp_config.yaml  llm_config.yaml  outreach_config.yaml  persona.yaml  search_strings.yaml  tasks.yaml
docs/: WORKFLOW.md
src/linkedin_connection_agent/: crew.py
src/linkedin_connection_agent/tools/: browser_tool.py  linkedin_tool.py  pdf_tool.py  search_tool.py
src/linkedin_connection_agent/utils/: llm_factory.py  message_validator.py  scheduler.py
