[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "linkedin-connection-agent"
version = "0.1.0"
description = "AI-powered LinkedIn connection agent with personalized outreach"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.20.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "playwright>=1.40.0",
    "pdfplumber>=0.10.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
    "sqlalchemy>=2.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]
